fix(layout): fix layout align

--- a/src/styles/flexbox.sass
+++ b/src/styles/flexbox.sass
@@ -11,6 +11,9 @@
 .flex-wrap
     flex-wrap: wrap
 
+.flex-align-items-center
+    align-items: center
+
 .flex-content-center
     justify-content: center
 
